--- a/stylesheets/projectStyle.css
+++ b/stylesheets/projectStyle.css
@@ -38,3 +38,7 @@ article{
     top: 0;
     left: 225px;
 }
+
+p{
+    line-height: 150%;
+}
